test immagine che non funziona

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <img src="donne egiziane.jpg" alt="Donne egiziane che si truccano">
           <p>In Egitto, ad esempio, le donne usavano un mix di oli, unguenti e polveri per migliorare la propria pelle e il proprio aspetto. I più noti erano i cosmetici utilizzati dalle donne egizie per gli occhi, come il khol, un tipo di polvere nera che veniva applicato per accentuare lo sguardo.</p>
           <p>Nel Medioevo, i cosmetici furono usati soprattutto per scopi religiosi o medicinali, ma fu con la rivoluzione industriale che i cosmetici iniziarono ad essere prodotti in massa e commercializzati.</p>
+          <img src="trucchi.jpg" alt="i trucchi nell'medioevo">
       </section>
     
       <!-- Sezione Evoluzione -->
